deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: vpn
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: alekslitvinenk/openvpn
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
          - containerPort: 80
            protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
