deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plstreamer-ingress
  namespace: plstreamer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  ingressClassName: public
  tls:
  - hosts:
    - vpn.wieru.com
    secretName: tls-secret
  rules:
  - host: vpn.wieru.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vpn-svc
              port:
                number: 443
